# dreamtime

./: .gitattributes  .gitignore  README.md  config.yaml.example  pyproject.toml
memory_keeper/: __init__.py  __main__.py  _config.py  _utils.py  dedup.py  engine.py  gaps.py  graduate.py  kanban_sync.py  memblock.py  pending.py  plugins.py  preference.py  proposition.py  snapshot.py  tasks.py  todo.py  training.py  vault.py
memory_keeper/adapters/: __init__.py  base.py  claude_log.py  claude_task.py  markdown_mem.py  obsidian.py
memory_keeper/dreamtime/: __init__.py  __main__.py  hook.py  jobs.example.json
memory_keeper/rubrics/: dreamtime-audit-rubric-v1.md  judge_prompt_v1.py  seed_samples.json
memory_keeper/tests/: test_memblock.py  test_proposition.py
