[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamtime"
version = "0.1.0"
requires-python = ">=3.10"
description = "Session-close memory distillation for Claude Code"
readme = "README.md"
license = "MIT"
authors = [
  { name = "memory-keeper contributors" },
]
keywords = ["claude-code", "memory", "llm", "agent", "dreamtime"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/2233admin/dreamtime"
Issues = "https://github.com/2233admin/dreamtime/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dreamtime = "memory_keeper.dreamtime.hook:_cli"
memory-keeper = "memory_keeper.dreamtime.hook:_cli"

[tool.setuptools.packages.find]
include = ["memory_keeper*"]

[tool.ruff]
line-length = 100
